# edg

./: .env.example  Makefile
.github/ISSUE_TEMPLATE/: tier_change.md
.github/workflows/: ci.yml
agents/: agents_v1_0_spec.md  lens_pm.yaml  lens_quant.yaml
ci/tests/: test_edges_and_loops.py  test_schema_validation.py  test_services_e2e.py  test_theory_alignment.py
constitution/: CONSTITUTION.yaml  GOVERNANCE.md  budgets.yaml  edge_owners.yaml  invariants.yaml
contracts/: postman_collection.json
contracts/schemas/: events.schema.json  holonomy_result.schema.json  loop.schema.json  nonlinear_waiver.schema.json  translator_Tij.schemas.json  transport_edge.schema.json
docs/: ARCHITECTURE.md  CODEOWNERS.md  CONTRIBUTING.md  DATA_INGEST.md  ERRORS.md  EXAMPLES.md  OBSERVABILITY.md  RUNBOOK.md  SECURITY.md  SPRINTS.md  THEORY.md  TO_DO.md
fixtures/: README.md
fixtures/edges/: quant_pm_linear.json
fixtures/gold/: cip_synth.csv  pcp_synth.csv
fixtures/loops/: gamma_Quant_PM_identity.json
infra/: docker-compose.yml
libs/edg_numerics/edg_numerics/: __init__.py  factorize.py  holonomy.py  metrics.py  pyproject.toml
loop-registry/: gold_loops.yaml
scripts/: gen_fixtures.py  seed_repo.py
services/dashboard-api/: requirements.txt
services/dsu-signer/: openapi.yaml  requirements.txt
services/holonomy-engine/: openapi.yaml  requirements.txt
services/lens-flow/: openapi.yaml
services/loop-registry/: openapi.yaml  requirements.txt
services/residual-service/: openapi.yaml  requirements.txt
specs/: K_v0_features.md  K_v0_metric_spec.md  regimes.md
(+10 files in other folders)
