[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edg-numerics"
version = "0.1.0"
description = "Reference numerics for EDG (trust regions, holonomy, factorization)"
authors = [{name = "Ironvest"}]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.urls]
homepage = "https://example.com/edg-numerics"


